# Kidiot

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
cmake/: Findraylib.cmake
include/: entity.h  include.h  includes.h  kidiot.h
map/: first_floor.txt  second_floor.txt
src/: kidiot.c  main.c
src/display/: draw.c  draw_entity.c  draw_map.c
src/game/: clock_gest.c  clock_gest_split.c  end_screen.c  game_loop.c  gest_mult_obs.c  init_game.c  init_game_split.c  load_map.c  map_utils.c  map_utils_other.c  move_players.c  win_screen.c
